# kopipe

./: .gitattributes  LICENSE  README.md  biome.json  mise.toml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
src/: App.css  App.test.tsx  App.tsx  i18n.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_info.rs  clip_model.rs  clip_search.rs  clips.rs  db.rs  image_storage.rs  lib.rs  main.rs  settings.rs
src-tauri/src/system/: clipboard.rs  mod.rs  shortcut.rs  win32.rs  window.rs
src/clips/: ClipImage.tsx  ClipMenu.test.tsx  ClipMenu.tsx  ClipRow.test.tsx  ClipRow.tsx  ClipText.test.tsx  ClipText.tsx  PreviewModal.tsx  SourceModal.tsx  clips.css  useClips.test.tsx  useClips.ts
src/components/: Onboarding.tsx  TitleBar.tsx  TopBar.tsx  components.css
src/lib/: format.test.ts  format.ts  prefs.ts  theme.test.ts  theme.ts  version.test.ts  version.ts
src/services/: api.test.ts  api.ts
src/settings/: Settings.tsx  settings.css  shortcut.test.ts  shortcut.ts  useSettingsState.ts
